infra/k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vnshop-prod
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
  labels:
    app.kubernetes.io/part-of: vnshop
    environment: prod
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
