infra/k8s/overlays/prod/image-pull-secret-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vnshop-image-pull-secret-patch
spec:
  template:
    spec:
      imagePullSecrets:
      - name: ghcr-pull
